this is a stable stopgap

--- a/Activtey.css
+++ b/Activtey.css
@@ -9,12 +9,13 @@ header{
 	text-align: center;
 }
 input{
-	width:30%;
+	width:80%;
 	font-size:2em;
 }
 button{
 	font-size: 1.5em;
 }
+
 #content{
 	float: right;
 	width: 80%;
@@ -26,6 +27,9 @@ button{
 	text-align: center;
 	background-color: gray;
 	width:20%;
+}
+#keypad{
+	padding-bottom: 15px;
 }
 .title{
 	font-size: 3.5em;
@@ -39,4 +43,12 @@ button{
 }
 .firstCanvas{
 	background-color: #171412;
+}
+.Kpad{
+	width:30%;
+	color:#27221F;
+}
+.sep{
+	padding-bottom: 10%;
+	background-color: #766980
 }
